# simporter-task-scrapy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  start_crawler.sh
dresslily/: scrapy.cfg
dresslily/dresslily/: items.py  middlewares.py  pipelines.py  settings.py
dresslily/dresslily/spiders/: splash_scripts.py  splash_spider.py
dresslily/dresslily/spiders/products/: men_hoodies.py  splash_scripts.py
dresslily/scraped_data/: hoodies.csv  reviews.csv
