[tool.poetry]
name = "simporter-task-scrapy"
version = "0.1.0"
description = "Parse info about man's hoodies"
authors = ["n4mespace <zaxarchuk.d@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
